--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -10,4 +10,5 @@ $greyColor: #A0A0A0;
 
         'components/sidebar.scss',
         'components/template.scss',
+        'components/search.scss',
         'components/loginPage.scss';
