--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -11,4 +11,5 @@ $greyColor: #A0A0A0;
         'components/sidebar.scss',
         'components/template.scss',
         'components/search.scss',
+        'components/templatePage.scss',
         'components/loginPage.scss';
