--- a/client/src/components/registrationPage/registartionPage.html
+++ b/client/src/components/registrationPage/registartionPage.html
@@ -69,9 +69,9 @@
                 :disabled="disabledButton"
                 @click="reqRegistration"
         >
-            Регестрация
+            Регистрация
         </v-btn>
-        <span class="mt-5">Уже зарегестрированы?
+        <span class="mt-5">Уже зарегистрированы?
             <span @click="$router.replace({path: '/login'})" class="login-page__href" href="#">Войти</span>
         </span>
     </div>
