--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -12,4 +12,5 @@ $greyColor: #A0A0A0;
         'components/template.scss',
         'components/search.scss',
         'components/templatePage.scss',
+        'components/profilePage.scss',
         'components/loginPage.scss';
