--- a/client/src/css/components/_search.scss
+++ b/client/src/css/components/_search.scss
@@ -7,4 +7,13 @@
     &__field {
         width: 440px;
     }
+
+    &__links {
+        & li {
+            transition: color 0.2s;
+            &:hover {
+                color: $greenHover
+            }
+        }
+    }
 }
