--- a/client/src/css/components/_sidebar.scss
+++ b/client/src/css/components/_sidebar.scss
@@ -45,6 +45,26 @@
                     height: 65px !important;
                 }
             }
+
+            &-links {
+                & li {
+                    &:hover {
+                        color: $greenHover;
+
+                        .fa-profile {
+                            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 2C17.421 2 22 6.579 22 12C22 17.421 17.421 22 12 22C6.579 22 2 17.421 2 12C2 6.579 6.579 2 12 2ZM12 7C10.273 7 9 8.272 9 10C9 11.728 10.273 13 12 13C13.726 13 15 11.728 15 10C15 8.272 13.726 7 12 7ZM17.106 16.772C16.209 15.452 14.713 14.572 13 14.572H11C9.286 14.572 7.791 15.452 6.894 16.772C8.172 18.14 9.985 19 12 19C14.015 19 15.828 18.14 17.106 16.772Z' fill='%234F7563'/%3E%3C/svg%3E%0A");
+                        }
+
+                        .fa-mark {
+                            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 3H7C5.9 3 5.01 3.9 5.01 5L5 21L12 18L19 21V5C19 3.9 18.1 3 17 3Z' fill='%234F7563'/%3E%3C/svg%3E%0A");
+                        }
+
+                        .fa-admin {
+                            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 1L21 5V11C21 16.55 17.16 21.74 12 23C6.84 21.74 3 16.55 3 11V5L12 1ZM12 4.9C11.4067 4.9 10.8266 5.07595 10.3333 5.40559C9.83994 5.73524 9.45542 6.20377 9.22836 6.75195C9.0013 7.30013 8.94189 7.90333 9.05764 8.48527C9.1734 9.06721 9.45912 9.60176 9.87868 10.0213C10.2982 10.4409 10.8328 10.7266 11.4147 10.8424C11.9967 10.9581 12.5999 10.8987 13.1481 10.6716C13.6962 10.4446 14.1648 10.0601 14.4944 9.56671C14.8241 9.07336 15 8.49334 15 7.9C15 7.10435 14.6839 6.34129 14.1213 5.77868C13.5587 5.21607 12.7956 4.9 12 4.9V4.9ZM12 12.8C10 12.8 6 13.89 6 15.88C6.65677 16.8701 7.54836 17.6823 8.59527 18.2442C9.64218 18.806 10.8119 19.1 12 19.1C13.1881 19.1 14.3578 18.806 15.4047 18.2442C16.4516 17.6823 17.3432 16.8701 18 15.88C18 13.89 14 12.8 12 12.8Z' fill='%234F7563'/%3E%3C/svg%3E%0A");
+                        }
+                    }
+                }
+            }
         }
     }
 
@@ -54,6 +74,30 @@
 
         &-text {
             font-weight: 500;
+        }
+
+        & ul {
+            & li {
+                &:hover {
+                    color: $greenHover;
+
+                    .fa-sport {
+                        background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.75 8.25H3.46875V5.25H7.03125V10.9688H16.9688V5.25H20.5312V8.25H23.25V15.75H20.5312V18.75H16.9688V13.0312H7.03125V18.75H3.46875V15.75H0.75V8.25Z' fill='%234F7563'/%3E%3C/svg%3E%0A");
+                    }
+
+                    .fa-apple {
+                        background-image: url("data:image/svg+xml,%3Csvg width='17' height='20' viewBox='0 0 17 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_8_279)'%3E%3Cpath d='M3.68648 5.03906C2.70101 5.22148 1.89275 5.76836 1.26094 6.67969C0.705029 7.48711 0.325943 8.50273 0.124067 9.72656C-0.0531425 10.8465 -0.0398598 11.966 0.162014 13.0859C0.465206 14.9348 1.07159 16.4844 1.98117 17.7344C3.06795 19.2449 4.43213 20 6.07445 20C6.47896 20 6.92065 19.8699 7.40105 19.6094C7.72967 19.4012 8.09585 19.2969 8.50036 19.2969C8.90487 19.2969 9.27067 19.4012 9.59967 19.6094C10.0801 19.8699 10.5218 20 10.9263 20C12.5686 20 13.9328 19.2449 15.0196 17.7344C15.9291 16.4844 16.5355 14.9348 16.8387 13.0859C17.0406 11.966 17.0539 10.8465 16.8767 9.72656C16.6748 8.50273 16.2957 7.48711 15.7398 6.67969C15.108 5.76836 14.2997 5.22148 13.3142 5.03906C12.7079 4.93477 11.8742 5.02617 10.8128 5.3125C9.90324 5.57305 9.13255 5.88555 8.50074 6.25C7.86893 5.88555 7.09824 5.57305 6.18867 5.3125C5.12693 5.02617 4.29286 4.93477 3.68648 5.03906ZM5.77126 3.4375C6.12492 3.77617 6.5928 4.02344 7.17375 4.17969C7.57826 4.30977 8.01996 4.375 8.50036 4.375L9.0688 4.33594C9.11927 3.97148 9.11927 3.55469 9.0688 3.08594C8.96748 2.14844 8.67719 1.43242 8.19717 0.9375C7.84351 0.598828 7.37563 0.351562 6.79467 0.195312C6.39016 0.0652344 5.94847 0 5.46806 0L4.89963 0.0390625L4.86168 0.625C4.86168 1.11992 4.92505 1.57539 5.05103 1.99219C5.20244 2.59102 5.44226 3.07305 5.77126 3.4375Z' fill='%234F7563'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_8_279'%3E%3Crect width='17' height='20' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+                    }
+
+                    .fa-alcohol {
+                        background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19 13V22H5V13C5 10.24 7.24 8 10 8V6H9V5H15V6H14V8C16.76 8 19 10.24 19 13ZM13 4L14 2H10L11 4H13ZM12 11C9.79 11 8 12.79 8 15C8 16 8.39 16.9 9 17.59V19H10.25V17.5H11.38V19H12.63V17.5H13.75V19H15V17.59C15.6397 16.8786 15.9957 15.9568 16 15C16 12.79 14.21 11 12 11ZM10.5 15C9.95 15 9.5 14.55 9.5 14C9.5 13.45 9.95 13 10.5 13C11.05 13 11.5 13.45 11.5 14C11.5 14.55 11.05 15 10.5 15ZM11.25 16.25L12 15L12.75 16.25H11.25ZM13.5 15C12.95 15 12.5 14.55 12.5 14C12.5 13.45 12.95 13 13.5 13C14.05 13 14.5 13.45 14.5 14C14.5 14.55 14.05 15 13.5 15Z' fill='%234F7563'/%3E%3C/svg%3E%0A");
+                    }
+
+                    .fa-video {
+                        background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 10.5V7C17 6.45 16.55 6 16 6H4C3.45 6 3 6.45 3 7V17C3 17.55 3.45 18 4 18H16C16.55 18 17 17.55 17 17V13.5L21 17.5V6.5L17 10.5Z' fill='%234F7563'/%3E%3C/svg%3E%0A");
+                    }
+                }
+            }
         }
     }
 }
