--- a/client/src/components/templatePages/profilePage/profilePage.html
+++ b/client/src/components/templatePages/profilePage/profilePage.html
@@ -7,8 +7,48 @@
                  src="../../../assets/no-photo.jpg"
                  alt="user-photo">
             <img v-else class="profile-page__image-block-img" :src="modifiedUser.photo" alt="user-photo">
-            <v-btn outlined>Загрузить фото</v-btn>
-            <v-btn text>Удалить</v-btn>
+            <v-dialog v-model="dialog" width="400" class="test">
+                <template v-slot:activator="{ on, attrs }">
+                    <v-btn outlined
+                           v-bind="attrs"
+                           v-on="on">
+                        Загрузить фото
+                    </v-btn>
+                </template>
+                <v-list>
+                    <div>
+                        <div class="fa-close ml-auto" @click="dialog = false"></div>
+                    </div>
+                    <div class="d-flex flex-column align-items-center">
+                            <v-file-input
+                                    class="image-file"
+                                    accept=".jpg*,.jpeg*,.png*"
+                                    v-model="imageFile"
+                                    show-size
+                                    label="Добавить изображение"
+                            >
+                            </v-file-input>
+                            <div class="mt-2">
+                                <v-btn
+                                        class="user-profile__form-button"
+                                        color="primary"
+                                        @click="reqUploadPhoto"
+                                        :disabled="imageFile == null">
+                                    Загрузить
+                                </v-btn>
+                            </div>
+<!--                        <div class="change-password__requirements-wrapper ml-10">-->
+<!--                            <div class="change-password__requirements-title">Требования к фото</div>-->
+<!--                            <ul>-->
+<!--                                <li class="change-password__requirement mt-1">доступные расширения: PNG, JPG, JPEG</li>-->
+<!--                                <li class="change-password__requirement mt-1">максимальный размер 5 мегабайт</li>-->
+<!--                                <li class="change-password__requirement mt-1">разрешение изображения 250x250px (в случае превышения размера изображение будет сжато)</li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+                    </div>
+                </v-list>
+            </v-dialog>
+            <v-btn text @click="reqDeletePhoto()">Удалить</v-btn>
         </div>
         <div class="d-flex flex-column profile-page__settings">
             <h3>Редактирование</h3>
