--- a/client/src/css/components/_template.scss
+++ b/client/src/css/components/_template.scss
@@ -42,3 +42,11 @@
     border: none;
     color: white !important;
 }
+
+.image-file {
+    width: 70%;
+}
+
+.v-list {
+    padding: 20px !important;
+}
