--- a/client/src/components/templatePages/sportPage/sportPage.html
+++ b/client/src/components/templatePages/sportPage/sportPage.html
@@ -14,5 +14,6 @@
                 <img v-else class="page__articles-item-img" src="../../../assets/no-photo.jpg" alt="image-article">
             </div>
         </div>
+        <h1 class="mt-5" v-if="!articles.length">Нет статей в этом разделе :(</h1>
     </div>
 </div>
