--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -14,4 +14,5 @@ $greyColor: #A0A0A0;
         'components/search.scss',
         'components/templatePage.scss',
         'components/profilePage.scss',
+        'components/viewPage.scss',
         'components/loginPage.scss';
