--- a/client/src/css/components/_sidebar.scss
+++ b/client/src/css/components/_sidebar.scss
@@ -3,7 +3,7 @@
     padding: 10px;
     background-color: $background;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    height: 100vh;
+    height: 100%;
     z-index: 2;
 
     &__profile-block {
