--- a/client/src/components/viewPage/viewPage.html
+++ b/client/src/components/viewPage/viewPage.html
@@ -7,5 +7,5 @@
             </slide>
         </carousel>
     </div>
-    <p>{{modifiedArticle.description}}</p>
+    <div class="ql-editor" v-html="article.description"></div>
 </div>
