--- a/client/src/css/components/_search.scss
+++ b/client/src/css/components/_search.scss
@@ -9,7 +9,7 @@
     }
 
     &__links {
-      margin-bottom: -;
+      margin-bottom: 0;
       
         & li {
             transition: color 0.2s;
