--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -5,6 +5,7 @@ $greenFont: #83AAA9;
 $greenShadow: #94bda8;
 $background: #F7F7F9;
 $greyColor: #A0A0A0;
+$greyBorder: #c2c2c2;
 
 //import
 @import './icons.scss',
