--- a/client/src/css/icons.scss
+++ b/client/src/css/icons.scss
@@ -24,8 +24,8 @@
     &-mark {
         @include fa-icon(24px, 24px, "data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 3H7C5.9 3 5.01 3.9 5.01 5L5 21L12 18L19 21V5C19 3.9 18.1 3 17 3Z' fill='black'/%3E%3C/svg%3E ");
 
-        &-alt {
-            @include fa-icon(24px, 24px, "data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 3H7C5.9 3 5.01 3.9 5.01 5L5 21L12 18L19 21V5C19 3.9 18.1 3 17 3Z' fill='white'/%3E%3C/svg%3E%0A")
+        &-active {
+            @include fa-icon(24px, 24px, "data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 3H7C5.9 3 5.01 3.9 5.01 5L5 21L12 18L19 21V5C19 3.9 18.1 3 17 3Z' fill='%234F7563'/%3E%3C/svg%3E%0A")
         }
     }
 
