--- a/client/src/components/templatePages/sportPage/sportPage.html
+++ b/client/src/components/templatePages/sportPage/sportPage.html
@@ -1,5 +1,5 @@
 <div class="page">
-    <h1>Правильное питание</h1>
+    <h1>Спорт</h1>
     <div class="page__articles d-flex flex-wrap mt-5">
         <div v-for="article in articles" class="page__articles-item-wrapper">
             <div class="page__articles-item cursor-pointer"
