--- a/client/src/components/templatePages/templatePages/templatePages.html
+++ b/client/src/components/templatePages/templatePages/templatePages.html
@@ -4,7 +4,7 @@
         <div v-for="article in articles" class="page__articles-item-wrapper">
             <div class="page__articles-item cursor-pointer"
                  :key="`${article.id}_${article.name}`"
-                 @click="$router.push({name: 'FoodArticle', params: {id:article.id}})">
+                 @click="$router.push({name: nameSection, params: {id:article.id}})">
                 <div class="page__articles-img-wrapper">
                     <img v-if="article.files" class="page__articles-item-img" :src="getPhoto(article.files[0])" alt="image-article">
                     <img v-else class="page__articles-item-img" src="../../../assets/no-photo.jpg" alt="image-article">
