--- a/client/src/components/templatePages/foodPage/foodPage.html
+++ b/client/src/components/templatePages/foodPage/foodPage.html
@@ -1,3 +1,3 @@
-<template-pages :idSection="2">
+<template-pages :idSection="2" :nameSection="'FoodArticle'">
     <h1>Правильное питание</h1>
 </template-pages>
