--- a/client/src/components/templatePages/habitsPage/habitsPage.html
+++ b/client/src/components/templatePages/habitsPage/habitsPage.html
@@ -1,3 +1,3 @@
-<template-pages :idSection="3">
+<template-pages :idSection="3" :nameSection="'HabitsArticle'">
     <h1>Вредные привычки</h1>
 </template-pages>
