--- a/client/src/components/templatePages/sportPage/sportPage.html
+++ b/client/src/components/templatePages/sportPage/sportPage.html
@@ -1,3 +1,3 @@
-<template-pages :idSection="1">
+<template-pages :idSection="1" :nameSection="'SportArticle'">
     <h1>Спорт</h1>
 </template-pages>
