--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -6,6 +6,7 @@ $greenShadow: #94bda8;
 $background: #F7F7F9;
 $greyColor: #A0A0A0;
 $greyBorder: #c2c2c2;
+$svgWhite: 'fff';
 
 //import
 @import './icons.scss',
