--- a/client/src/components/registrationPage/registartionPage.html
+++ b/client/src/components/registrationPage/registartionPage.html
@@ -75,4 +75,11 @@
             <span @click="$router.replace({path: '/login'})" class="login-page__href" href="#">Войти</span>
         </span>
     </div>
+    <b-toast
+            id="successLogin"
+            toaster="b-toaster-top-full custom-toast"
+            :variant="toastInfo.isSuccess ? 'success' : 'error'"
+            auto-hide-delay="2500">
+        <template v-slot:toast-title>{{toastInfo.message}}</template>
+    </b-toast>
 </div>
