--- a/client/src/components/templatePages/favouritePage/favouritePage.html
+++ b/client/src/components/templatePages/favouritePage/favouritePage.html
@@ -19,4 +19,11 @@
         </div>
         <h1 class="mt-5" v-if="!articles.length">Нет статей в избранном :(</h1>
     </div>
+    <b-toast
+            id="successLogin"
+            toaster="b-toaster-top-full custom-toast"
+            :variant="toastInfo.isSuccess ? 'success' : 'error'"
+            auto-hide-delay="2500">
+        <template v-slot:toast-title>{{toastInfo.message}}</template>
+    </b-toast>
 </div>
