--- a/client/src/components/templatePages/profilePage/profilePage.html
+++ b/client/src/components/templatePages/profilePage/profilePage.html
@@ -102,4 +102,11 @@
             </div>
         </div>
     </div>
+    <b-toast
+            id="successLogin"
+            toaster="b-toaster-top-full custom-toast"
+            :variant="toastInfo.isSuccess ? 'success' : 'error'"
+            auto-hide-delay="2500">
+        <template v-slot:toast-title>{{toastInfo.message}}</template>
+    </b-toast>
 </div>
