--- a/client/src/css/components/_template.scss
+++ b/client/src/css/components/_template.scss
@@ -54,3 +54,111 @@
 .ql-editor {
     min-height: auto !important;
 }
+
+.custom-toast {
+    .b-toast {
+        > .toast {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            max-width: 100%;
+            margin-left: -10px !important;
+            height: 54px;
+            border-radius: 0;
+            border: none;
+            backdrop-filter: blur(5px);
+            opacity: 1;
+            z-index: 999;
+
+            header {
+                background: transparent;
+                border: none;
+                height: 100%;
+                color: #fff;
+                padding: 0 20px;
+
+                &::before {
+                    content: '';
+                    margin-right: 25px;
+                    width: 28px;
+                    height: 28px;
+                }
+            }
+
+            .close {
+                text-shadow: none;
+                color: #fff;
+                font-size: 25px;
+                font-family: initial;
+                opacity: 1;
+            }
+
+            .toast-body {
+                display: none;
+            }
+        }
+
+        &-success {
+            > .toast {
+                background: rgba(66, 164, 51, 0.8);
+
+                header {
+                    &::before {
+                        background: url("data:image/svg+xml,%3Csvg width='15' height='11' viewBox='0 0 15 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.9 1.10007L5.00005 11.0001L0.0500488 6.05007L0.757049 5.34307L5.00005 9.58607L14.192 0.393066L14.899 1.10107L14.9 1.10007Z' fill='%23#{$svgWhite}' fill-opacity='0.9'/%3E%3C/svg%3E%0A") no-repeat center;
+                        background-size: 13px;
+                        border: 1px solid #fff;
+                        border-radius: 50%;
+                    }
+                }
+            }
+        }
+
+        &-attention {
+            > .toast {
+                background: rgba(#FFD058, 0.8);
+
+                header {
+                    color: #30333A;
+
+                    &::before {
+                        background: url("data:image/svg+xml,%3Csvg width='30' height='26' viewBox='0 0 30 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M29.367 21.5304L17.1639 1.29257C16.6831 0.495296 15.8061 0 14.8751 0C13.9441 0 13.0671 0.495296 12.5863 1.29263L0.383235 21.5304C-0.11363 22.3545 -0.128331 23.3869 0.344827 24.2248C0.818101 25.0627 1.7098 25.5832 2.67203 25.5832H27.0782C28.0404 25.5832 28.9322 25.0627 29.4055 24.2247C29.8786 23.3868 29.8639 22.3544 29.367 21.5304ZM27.7189 23.2723C27.5886 23.503 27.3431 23.6463 27.0782 23.6463H2.67203C2.40713 23.6463 2.16163 23.503 2.03141 23.2724C1.90114 23.0417 1.90521 22.7575 2.04193 22.5307L14.2451 2.29281C14.3774 2.07334 14.6189 1.93696 14.8752 1.93696C15.1314 1.93696 15.3728 2.07334 15.5052 2.29281L27.7082 22.5307C27.8451 22.7575 27.8491 23.0417 27.7189 23.2723Z' fill='%2330333A'/%3E%3Cpath d='M14.8841 7.96899C14.1473 7.96899 13.5723 8.36435 13.5723 9.06522C13.5723 11.2036 13.8238 14.2765 13.8238 16.415C13.8239 16.9721 14.3091 17.2056 14.8841 17.2056C15.3154 17.2056 15.9264 16.9721 15.9264 16.415C15.9264 14.2766 16.1779 11.2037 16.1779 9.06522C16.1779 8.36441 15.5849 7.96899 14.8841 7.96899Z' fill='%2330333A'/%3E%3Cpath d='M14.9023 18.4453C14.1116 18.4453 13.5186 19.0743 13.5186 19.8291C13.5186 20.5658 14.1116 21.2128 14.9023 21.2128C15.6391 21.2128 16.2681 20.5658 16.2681 19.8291C16.2681 19.0743 15.639 18.4453 14.9023 18.4453Z' fill='%2330333A'/%3E%3C/svg%3E%0A") no-repeat center;
+                    }
+                }
+
+                .close {
+                    color: #30333A;
+                }
+            }
+        }
+
+        &-error {
+            > .toast {
+                background: rgba(210, 21, 18, 0.8);
+
+                header {
+                    &::before {
+                        background: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.73841 7.8399L15.492 1.0797C15.6112 0.959965 15.678 0.79789 15.6779 0.628976C15.6778 0.460062 15.6107 0.298077 15.4914 0.1785C15.2526 -0.0591001 14.832 -0.0602999 14.5908 0.1797L7.83901 6.9399L1.08481 0.1779C0.844814 -0.0591001 0.424214 -0.0579001 0.185414 0.1791C0.126142 0.238136 0.0792202 0.308386 0.0473885 0.385751C0.0155567 0.463115 -0.000547876 0.546045 1.42224e-05 0.6297C1.42224e-05 0.8001 0.0660142 0.9597 0.185414 1.0779L6.93901 7.8393L0.186014 14.6013C0.0668455 14.7212 0.000109648 14.8835 0.000447095 15.0526C0.000784543 15.2216 0.0681679 15.3837 0.187814 15.5031C0.303614 15.6177 0.467414 15.6837 0.636614 15.6837H0.640214C0.810014 15.6831 0.973814 15.6165 1.08721 15.5007L7.83901 8.7405L14.5932 15.5025C14.7126 15.6213 14.8722 15.6873 15.0414 15.6873C15.1251 15.6875 15.208 15.6712 15.2853 15.6393C15.3627 15.6074 15.4329 15.5605 15.4921 15.5014C15.5512 15.4422 15.5981 15.3719 15.63 15.2946C15.6619 15.2173 15.6783 15.1344 15.678 15.0507C15.678 14.8809 15.612 14.7207 15.492 14.6025L8.73841 7.8399Z' fill='%23#{$svgWhite}' fill-opacity='0.9'/%3E%3C/svg%3E%0A") no-repeat center;
+                        background-size: 10px;
+                        border: 1px solid #fff;
+                        border-radius: 50%;
+                    }
+                }
+            }
+        }
+
+        &-info {
+            > .toast {
+                background: rgba(18, 85, 156, 0.8);
+
+                header {
+                    &::before {
+                        background: url("data:image/svg+xml,%3Csvg width='6' height='25' viewBox='0 0 6 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 10C5 8.89543 4.10457 8 3 8C1.89543 8 1 8.89543 1 10V23C1 24.1046 1.89543 25 3 25C4.10457 25 5 24.1046 5 23V10Z' fill='white'/%3E%3Cpath d='M0 3C0 4.6575 1.3425 6 3 6C4.6575 6 6 4.6575 6 3C6 1.3425 4.6575 0 3 0C1.3425 0 0 1.3425 0 3Z' fill='white'/%3E%3C/svg%3E%0A") no-repeat center;
+                        background-size: 3px;
+                        border: 1px solid #fff;
+                        border-radius: 50%;
+                    }
+                }
+            }
+        }
+    }
+}
