--- a/client/src/css/components/_search.scss
+++ b/client/src/css/components/_search.scss
@@ -7,6 +7,12 @@
     &__field {
         width: 440px;
         position: relative;
+
+        &-input {
+            &:hover + .search__result {
+                display: block;
+            }
+        }
     }
 
     &__links {
@@ -21,11 +27,16 @@
     }
 
     &__result {
+        display: none;
         position: absolute;
         width: 100%;
         height: 320px;
         overflow: auto;
         z-index: 1000;
         background-color: $background;
+
+        &:hover {
+            display: block;
+        }
     }
 }
