--- a/client/src/components/templatePages/profilePage/profilePage.html
+++ b/client/src/components/templatePages/profilePage/profilePage.html
@@ -103,7 +103,7 @@
         </div>
     </div>
     <b-toast
-            id="successLogin"
+            id="infoToast"
             toaster="b-toaster-top-full custom-toast"
             :variant="toastInfo.isSuccess ? 'success' : 'error'"
             auto-hide-delay="2500">
