--- a/client/src/css/components/_sidebar.scss
+++ b/client/src/css/components/_sidebar.scss
@@ -6,6 +6,10 @@
     height: 100%;
     z-index: 2;
 
+    &__login-block {
+        margin-left: 15px;
+    }
+
     &__profile-block {
         margin-top: 75px;
         width: 100%;
