--- a/client/src/components/templatePages/favouritePage/favouritePage.html
+++ b/client/src/components/templatePages/favouritePage/favouritePage.html
@@ -20,7 +20,7 @@
         <h1 class="mt-5" v-if="!articles.length">Нет статей в избранном :(</h1>
     </div>
     <b-toast
-            id="successLogin"
+            id="infoToast"
             toaster="b-toaster-top-full custom-toast"
             :variant="toastInfo.isSuccess ? 'success' : 'error'"
             auto-hide-delay="2500">
