--- a/client/src/components/templatePages/templatePages/templatePages.html
+++ b/client/src/components/templatePages/templatePages/templatePages.html
@@ -21,7 +21,7 @@
         <h1 class="mt-5" v-if="!articles.length">Нет статей в этом разделе :(</h1>
     </div>
     <b-toast
-            id="successLogin"
+            id="infoToast"
             toaster="b-toaster-top-full custom-toast"
             :variant="toastInfo.isSuccess ? 'success' : 'error'"
             auto-hide-delay="2500">
