--- a/client/src/components/viewPage/viewPage.html
+++ b/client/src/components/viewPage/viewPage.html
@@ -35,4 +35,11 @@
             </div>
         </div>
     </div>
+    <b-toast
+            id="infoToast"
+            toaster="b-toaster-top-full custom-toast"
+            :variant="toastInfo.isSuccess ? 'success' : 'error'"
+            auto-hide-delay="2500">
+        <template v-slot:toast-title>{{toastInfo.message}}</template>
+    </b-toast>
 </div>
